--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "global": "^4.4.0",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "xlsx": "^0.18.5",
     "yarn": "^1.22.22"
   },
